--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4",
+    "solidity-structure": "^0.1.0",
     "tar.gz": "^1.0.5",
     "toml": "^2.3.0",
     "tomlify-j0.4": "^1.0.1"
